tests/good/print/int.go
package main

import "fmt"

func main() {
	fmt.Print(12, "\n")
}

/*
== Expected program output ==
12
*/
