tests/bad/func/multiple-func.go
package main

func toto() {}
func toto() {}
